--- a/css/style.css
+++ b/css/style.css
@@ -165,7 +165,33 @@ nav,.banner{
        bottom: 27%;
        right: 18%; 
 }
+/*games of types section*/
+.games-category-section{
+    display: grid;
+    grid-template-columns: repeat(5,1fr);
+    justify-content: space-evenly;
+    justify-items: center;
+    align-content: space-evenly;
+    align-items: center;
+    background-color: #FFF9FC;
+    width: 100%;
+    height: 300px;
+}
+.game-types{
+    display: flex;
+    width: 220px;
+    gap: 10px;
+    margin-bottom: 20px;
+    text-align: center;
+    background-color: white;
+    border-radius: 50px;
+    padding: 5px;
 
+}
+.game-types:hover{
+    color: #FF42A5;
+    border: 1px solid #FF42A5;
+}
 /*Responsive for mobile*/
 
 @media screen and (max-width:576px) {
@@ -226,6 +252,29 @@ nav,.banner{
         bottom: 20%;
         right: 5%;
  }
+ .games-category-section{
+    grid-template-columns: repeat(3,1fr);   
+    background-color: #FFF;
+    margin-left: 0px;
+    margin-right: 0px;
+    padding: 0px;
+    margin-bottom: 50px ;
+}
+.game-types{
+    width: 95%;  
+    background-color: white;
+    border-radius: 50px;
+    padding:5px;
+    gap: 10px;
+    margin-right: 10px;
+}
+.game-types h5{
+    font-size: 13px;
+}
+.game-types:hover{
+    padding: 0px;
+  
+}
 }
 /*Responsive for tablets*/
 @media screen and (min-width:576px) and (max-width:992px) {
@@ -286,4 +335,26 @@ nav,.banner{
         bottom: 20%;
         right: 5%;
  }
+ .games-category-section{
+    grid-template-columns: repeat(3,1fr);   
+    background-color: #FFF;
+    margin-left: 0px;
+    margin-right: 0px;
+    padding: 0px;
+}
+.game-types{
+    width: 95%;  
+    background-color: white;
+    border-radius: 50px;
+    padding:5px;
+    gap: 10px;
+    margin-right: 10px;
+}
+.game-types h5{
+    font-size: 13px;
+}
+.game-types:hover{
+    padding: 0px;
+  
+}
 }
