--- a/css/style.css
+++ b/css/style.css
@@ -105,7 +105,6 @@ nav,.banner{
 }
 /* Card video Section*/
 
-
 .games-video-section h2{
     color: #0B0223;
     text-align: center;
@@ -165,14 +164,13 @@ nav,.banner{
        bottom: 27%;
        right: 18%; 
 }
-/*games of types section*/
 .games-category-section{
-    display: grid;
-    grid-template-columns: repeat(5,1fr);
-    justify-content: space-evenly;
-    justify-items: center;
-    align-content: space-evenly;
+    display: flex;
+    justify-content:center;
     align-items: center;
+    width:100%;
+    margin : 0 auto;
+    flex-wrap: wrap;
     background-color: #FFF9FC;
     width: 100%;
     height: 300px;
@@ -298,6 +296,7 @@ footer{
         right: 5%;
  }
  .games-category-section{
+    display: grid;
     grid-template-columns: repeat(3,1fr);   
     background-color: #FFF;
     margin-left: 0px;
@@ -413,6 +412,7 @@ footer{
         right: 5%;
  }
  .games-category-section{
+    display: grid;
     grid-template-columns: repeat(3,1fr);   
     background-color: #FFF;
     margin-left: 0px;
